<resources>
    <string name="app_name">Yacas</string>
    <string name="action_settings">Settings</string>
    <string name="action_evaluate">Evaluate</string>
    <string name="menu_cell">Cell</string>
    <string name="action_interrupt">Interrupt</string>
    <string name="action_add_above">Add above</string>
    <string name="action_add_below">Add below</string>
    <string name="action_delete_current">Delete current</string>
</resources>
