<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.yacas.yacasforandroid.MainActivity" >
    <item android:id="@+id/action_evaluate"
        android:title="@string/action_evaluate"
        android:icon="@drawable/ic_action_evaluate"
        app:showAsAction="always" />
    <item android:id="@+id/action_interrupt"
        android:title="@string/action_interrupt"
        android:icon="@drawable/ic_action_evaluate"
        app:showAsAction="never" />
    <item android:id="@+id/cell"
        android:title="@string/menu_cell">
        <menu>
            <item android:id="@+id/action_add_above"
                android:title="@string/action_add_above"
                android:icon="@drawable/ic_action_add_above"
                app:showAsAction="never" />
            <item android:id="@+id/action_add_below"
                android:title="@string/action_add_below"
                android:icon="@drawable/ic_action_add_below"
                app:showAsAction="never" />
            <item android:id="@+id/action_delete_current"
                android:title="@string/action_delete_current"
                android:icon="@drawable/ic_action_delete_current"
                app:showAsAction="never" />
        </menu>
    </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
